// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticlePublicationDetails should match snapshot with byline 1`] = `
<div
  className=""
>
  <h3>
    
  </h3>
  <div
    className="date-author"
  >
    <time>
      May 8th 2018
    </time>
     | by me
  </div>
</div>
`;

exports[`ArticlePublicationDetails should match snapshot without byline 1`] = `
<div
  className=""
>
  <h3>
    
  </h3>
  <div
    className="date-author"
  >
    <time>
      May 8th 2018
    </time>
    
  </div>
</div>
`;
